--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -1,7 +1,7 @@
 - name: Jorde Stojanov
   # photo: verdoes.jpg
-  duration: In the Allan Lab 2015 - 2018, now Project manager at the FMD
-  info: Fine mechanical engineer associated with the FMD working in our group
+  duration: In the EAS lab during Winter 2024, MS in Computer Science alum (May 2024)
+  # info: Fine mechanical engineer associated with the FMD working in our group
   # email: verdoes@fmd.physics.leidenuniv.nl
   number_educ: 1
   education1: MS Computer Science, Eastern Michigan University alum (May 2024)
@@ -9,7 +9,7 @@
 - name: Jamie Taylor
   # photo: irene.jpg
   # info: PhD student
-  # duration: In the Allan Lab Jan 2015 to June 2019, now R&D scientist at Nearfield Instruments
+  duration: In the EAS lab during Winter 2024, BS in Computer Science alum (May 2024)
   # email: Battisti@Physics.LeidenUniv.nl
   number_educ: 1
   education1: BSc Computer Science, Eastern Michigan University alum (May 2024)
