--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,5 +1,5 @@
 - name: Ourania Spantidi
-  photo: spantidi.png
+  # photo: spantidi.png
   info: Assistant Professor (since 2023)
   email: ourania.spantidi@emich.edu
   number_educ: 3
