--- a/_data/students.yml
+++ b/_data/students.yml
@@ -36,3 +36,9 @@
  # email: ktracy2@emich.edu
   number_educ: 1
   education1: BSc Computer Science, Eastern Michigan University (present)
+
+- name: Brian Cong
+ # photo: william.jpg
+ # email: ktracy2@emich.edu
+  number_educ: 1
+  education1: BSc Computer Science, Eastern Michigan University (present)
