--- a/_data/students.yml
+++ b/_data/students.yml
@@ -1,44 +1,44 @@
 - name: Kaitlyn (Katie) Tracy
- # photo: katie.jpg
+  photo: katietr.jpg
  # email: ktracy2@emich.edu
   number_educ: 2
   education1: BSc Psychology, Eastern Michigan University
   education2: MS Computer Science, Eastern Michigan University (present)
 
 - name: William Dalian
- # photo: william.jpg
+  photo: connor.jpg
  # email: ktracy2@emich.edu
   number_educ: 2
   education1: BSc Psychology, Eastern Michigan University
   education2: MS Computer Science, Eastern Michigan University (present)
 
 - name: Connor S
- # photo: william.jpg
+  photo: connor.jpg
  # email: ktracy2@emich.edu
   number_educ: 2
   education1: BSc Computer Science, Eastern Michigan University
   education2: MS Computer Science, Eastern Michigan University (present)
 
 - name: David Goh
- # photo: william.jpg
+  photo: connor.jpg
  # email: ktracy2@emich.edu
   number_educ: 1
   education1: BSc Computer Science, Eastern Michigan University (present)
 
 - name: Stela Opingari
- # photo: william.jpg
+  photo: connor.jpg
  # email: ktracy2@emich.edu
   number_educ: 1
   education1: BSc Computer Science, Eastern Michigan University (present)
  
 - name: Victor Tyler Jr.
- # photo: william.jpg
+  photo: victyler.jpg
  # email: ktracy2@emich.edu
   number_educ: 1
   education1: BSc Computer Science, Eastern Michigan University (present)
 
 - name: Brian Cong
- # photo: william.jpg
+  photo: brian_headshot.jpg
  # email: ktracy2@emich.edu
   number_educ: 1
   education1: BSc Computer Science, Eastern Michigan University (present)
