--- a/_data/students.yml
+++ b/_data/students.yml
@@ -32,7 +32,7 @@
   education1: BSc Computer Science and Mathematics, Eastern Michigan University (present)
 
 - name: Stela Opingari
-  photo: connor.jpg
+  photo: stela.jpg
  # email: ktracy2@emich.edu
   number_educ: 1
   education1: BSc Computer Science, Eastern Michigan University (present)
