--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -1,5 +1,5 @@
 - name: Jorde Stojanov
-  # photo: verdoes.jpg
+  photo: jorde.jpg
   duration: In the EAS lab during Winter 2024, MS in Computer Science alum (May 2024)
   info: GPT-driven NPCs in Virtual Environments
   # email: verdoes@fmd.physics.leidenuniv.nl
@@ -7,7 +7,7 @@
   education1: MS Computer Science, Eastern Michigan University alum (May 2024)
 
 - name: Jamie Taylor
-  # photo: irene.jpg
+  photo: jamie.jpg
   info: simulating virtual societies using LLMs in Unity
   duration: In the EAS lab during Winter 2024, BS in Computer Science alum (May 2024)
   # email: Battisti@Physics.LeidenUniv.nl
