--- a/_data/students.yml
+++ b/_data/students.yml
@@ -41,7 +41,7 @@
   photo: victyler.jpg
  # email: ktracy2@emich.edu
   number_educ: 1
-  education1: BSc Computer Science, Eastern Michigan University (present)
+  education1: BA Computer Science, Eastern Michigan University (present)
 
 - name: Brian Cong
   photo: brian_headshot.jpg
