--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,2 +1,2 @@
 - date: October 15th, 2024
-  headline: Thanks to a grant by the James H. Brickley Endowment for Faculty Professional Development and Innovation, <b>our lab is officially starting</b>!
+  headline: Thanks to the James H. Brickley Endowment for Faculty Professional Development and Innovation grant, <b>our lab is officially starting</b>!
